modifed golangci-lint rules

--- a/views/auth/login.templ
+++ b/views/auth/login.templ
@@ -15,7 +15,7 @@ templ LoginPage() {
 		<div class="w-full max-w-md p-8 mx-auto rounded-lg bg-colorcard shadow-cardshadow">
 			<div class="flex flex-col items-center mb-6">
 				<span class="w-20 h-20 mb-4 icon-[bi--person-fill] text-white"></span>
-				<h2 class="text-center text-3xl font-bold text-gray4 mb-2">Welcome Back!</h2>
+				<h2 class="text-center text-3xl font-bold text-gray4 mb-2">Welcome Back! Kesu</h2>
 				<p class="text-center text-gray4">Please sign in to continue</p>
 			</div>
 			@LoginForm(LoginData{})
