--- a/views/auth/login.templ
+++ b/views/auth/login.templ
@@ -15,7 +15,7 @@ templ LoginPage() {
 		<div class="w-full max-w-md p-8 mx-auto rounded-lg bg-colorcard shadow-cardshadow">
 			<div class="flex flex-col items-center mb-6">
 				<span class="w-20 h-20 mb-4 icon-[bi--person-fill] text-white"></span>
-				<h2 class="text-center text-3xl font-bold text-gray4 mb-2">Welcome Back! Kesu</h2>
+				<h2 class="text-center text-3xl font-bold text-gray4 mb-2">Welcome Back!</h2>
 				<p class="text-center text-gray4">Please sign in to continue</p>
 			</div>
 			@LoginForm(LoginData{})
@@ -24,31 +24,31 @@ templ LoginPage() {
 }
 
 templ LoginForm(data LoginData) {
-			<form class="space-y-6" action="/login"  hx-post="/login" hx-swap="outerHTML">
-				<input type="hidden" name="remember" value="true" />
-				<div class="space-y-4">
-					<div>
-						<input id="email-address" name="email" type="email" value={data.Email} autocomplete="email" required class="w-full px-3 py-2 placeholder-gray-500 text-gray4 bg-blue2 rounded-md focus:outline-none focus:ring-purple focus:border-purple" placeholder="Email address" />
-					</div>
-					<div>
-						<input id="password" name="password" type="password" autocomplete="current-password" required class="w-full px-3 py-2 placeholder-gray-500 text-gray4 bg-blue2 rounded-md focus:outline-none focus:ring-purple focus:border-purple" placeholder="Password" />
-					</div>
-				</div>
-			if data.Error != "" {
-				<div class="bg-red-250 text-red-350 text-sm p-3 rounded-lg mb-4" id="error-message">
-					{ data.Error }
-				</div>
-			}
-				<div>
-					<button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent rounded-md text-gray4 bg-indigo2 hover:bg-indigo3 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo2">
-						Sign in
-					</button>
-				</div>
-			</form>
+	<form class="space-y-6" action="/login" hx-post="/login" hx-swap="outerHTML">
+		<input type="hidden" name="remember" value="true"/>
+		<div class="space-y-4">
+			<div>
+				<input id="email-address" name="email" type="email" value={ data.Email } autocomplete="email" required class="w-full px-3 py-2 placeholder-gray-500 text-gray4 bg-blue2 rounded-md focus:outline-none focus:ring-purple focus:border-purple" placeholder="Email address"/>
+			</div>
+			<div>
+				<input id="password" name="password" type="password" autocomplete="current-password" required class="w-full px-3 py-2 placeholder-gray-500 text-gray4 bg-blue2 rounded-md focus:outline-none focus:ring-purple focus:border-purple" placeholder="Password"/>
+			</div>
+		</div>
+		if data.Error != "" {
+			<div class="bg-red-250 text-red-350 text-sm p-3 rounded-lg mb-4" id="error-message">
+				{ data.Error }
+			</div>
+		}
+		<div>
+			<button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent rounded-md text-gray4 bg-indigo2 hover:bg-indigo3 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo2">
+				Sign in
+			</button>
+		</div>
+	</form>
 }
 
 templ LoginIndex(pageInfo layout.PageInfo, cmp templ.Component) {
 	@layout.BaseLayout(pageInfo) {
-        @cmp
-    }
+		@cmp
+	}
 }
